# Diceware-Pass-Genarator

./: .gitignore  CMakeLists.txt  Makefile  README.md  diceware  diceware.cpp
include/: diceware.hpp
src/: CMakeLists.txt  diceware.cpp  main.cpp
